{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 218,
  "lineage": "1303328d-34f4-13fd-afd5-0061b69aac7f",
  "resources": [
    {
      "module": "module.elastic-ip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eips_iddev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat_gateway",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06556693887a71414",
            "arn": "arn:aws:ec2:us-east-1:125480470368:elastic-ip/eipalloc-06556693887a71414",
            "association_id": "eipassoc-0b4ac5f954b25c294",
            "domain": "vpc",
            "id": "eipalloc-06556693887a71414",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f326b621ac50945d",
            "private_dns": "ip-10-37-2-51.ec2.internal",
            "private_ip": "10.37.2.51",
            "public_dns": "ec2-54-166-153-171.compute-1.amazonaws.com",
            "public_ip": "54.166.153.171",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "1234",
              "Domain": "iddev",
              "Environment": "dev",
              "Name": "eip-nat",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "CostCenter": "1234",
              "Domain": "iddev",
              "Environment": "dev",
              "Name": "eip-nat",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.internet-gtw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_teste",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:internet-gateway/igw-088d7859ec4b5c42d",
            "id": "igw-088d7859ec4b5c42d",
            "owner_id": "125480470368",
            "tags": {
              "Domain": "iddev",
              "Environment": "dev",
              "Name": "igw-iddev",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "iddev",
              "Environment": "dev",
              "Name": "igw-iddev",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "vpc_id": "vpc-08fc6d81de1afeeee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_teste"
          ]
        }
      ]
    },
    {
      "module": "module.nat-gtw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gtw_teste",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06556693887a71414",
            "association_id": "eipassoc-0b4ac5f954b25c294",
            "connectivity_type": "public",
            "id": "nat-0bfc0bedf6f3247d6",
            "network_interface_id": "eni-0f326b621ac50945d",
            "private_ip": "10.37.2.51",
            "public_ip": "54.166.153.171",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0247ad7188a76c540",
            "tags": {
              "Domain": "iddev",
              "Environment": "dev",
              "Name": "nat-gtw-iddev",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "iddev",
              "Environment": "dev",
              "Name": "nat-gtw-iddev",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            }
          },
          "dependencies": [
            "module.elastic-ip.aws_eip.eips_iddev",
            "module.internet-gtw.aws_internet_gateway.igw_teste",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc_teste"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_iddev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg_teste",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:security-group/sg-07118c42676a7ea57",
            "description": "Security Group teste",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir trafego de saida",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07118c42676a7ea57",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir trafego de entrada para via web",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir trafego de entrada para via web",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "sg_teste",
            "name_prefix": "",
            "owner_id": "125480470368",
            "revoke_rules_on_delete": false,
            "tags": {
              "Domain": "iddev",
              "Environment": "dev",
              "Name": "sg_teste",
              "Owner": "security",
              "Project": "opc",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "iddev",
              "Environment": "dev",
              "Name": "sg_teste",
              "Owner": "security",
              "Project": "opc",
              "Provisioning-method": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fc6d81de1afeeee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_teste"
          ]
        },
        {
          "index_key": "sg_teste22",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:security-group/sg-0ff70b2f9271f319d",
            "description": "Security Group teste2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir trafego de saida",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff70b2f9271f319d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir trafego de entrada para via web",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir trafego de entrada para via web",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "sg_teste22",
            "name_prefix": "",
            "owner_id": "125480470368",
            "revoke_rules_on_delete": false,
            "tags": {
              "Domain": "iddev",
              "Environment": "dev",
              "Name": "sg_teste22",
              "Owner": "security",
              "Project": "opc",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "iddev",
              "Environment": "dev",
              "Name": "sg_teste22",
              "Owner": "security",
              "Project": "opc",
              "Provisioning-method": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fc6d81de1afeeee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_teste"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg_teste-ingress-cc0086039e26a067e1c818ecd938adbb",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Permitir trafego de saida",
            "from_port": 0,
            "id": "sgrule-1832326206",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07118c42676a7ea57",
            "security_group_rule_id": "sgr-01453249e9ab944a1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.sg_iddev",
            "module.vpc.aws_vpc.vpc_teste"
          ]
        },
        {
          "index_key": "sg_teste22-ingress-cc0086039e26a067e1c818ecd938adbb",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Permitir trafego de saida",
            "from_port": 0,
            "id": "sgrule-2111466591",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ff70b2f9271f319d",
            "security_group_rule_id": "sgr-051f57beb3729c4df",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.sg_iddev",
            "module.vpc.aws_vpc.vpc_teste"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg_teste-ingress-63316f7412473a602ae21c1969537197",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Permitir trafego de entrada para via web",
            "from_port": 8081,
            "id": "sgrule-1764395219",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07118c42676a7ea57",
            "security_group_rule_id": "sgr-06d010645fd51bb32",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.sg_iddev",
            "module.vpc.aws_vpc.vpc_teste"
          ]
        },
        {
          "index_key": "sg_teste-ingress-d25becd0c41858e1fa9761a9d97d765c",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Permitir trafego de entrada para via web",
            "from_port": 8080,
            "id": "sgrule-1962396464",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07118c42676a7ea57",
            "security_group_rule_id": "sgr-003d62e04d6067309",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.sg_iddev",
            "module.vpc.aws_vpc.vpc_teste"
          ]
        },
        {
          "index_key": "sg_teste22-ingress-9f54d938057655daefc6468a0439bbea",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Permitir trafego de entrada para via web",
            "from_port": 8081,
            "id": "sgrule-1477269856",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ff70b2f9271f319d",
            "security_group_rule_id": "sgr-03622bc5901028f73",
            "self": false,
            "source_security_group_id": "sg-07118c42676a7ea57",
            "timeouts": null,
            "to_port": 8081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.sg_iddev",
            "module.vpc.aws_vpc.vpc_teste"
          ]
        },
        {
          "index_key": "sg_teste22-ingress-d25becd0c41858e1fa9761a9d97d765c",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Permitir trafego de entrada para via web",
            "from_port": 8080,
            "id": "sgrule-223155790",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ff70b2f9271f319d",
            "security_group_rule_id": "sgr-04490df43b817ab95",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.sg_iddev",
            "module.vpc.aws_vpc.vpc_teste"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:subnet/subnet-0059232aa91f0a2c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.37.12.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0059232aa91f0a2c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125480470368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Domain": "iddev",
              "Environment": "dev",
              "Name": "teste-subnet-private1-us-east-1a",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "iddev",
              "Environment": "dev",
              "Name": "teste-subnet-private1-us-east-1a",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "vpc_id": "vpc-08fc6d81de1afeeee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_teste"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:subnet/subnet-0a1fe774530ac135f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.37.16.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1fe774530ac135f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125480470368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Domain": "iddev",
              "Environment": "dev",
              "Name": "teste-subnet-private2-us-east-1b",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "iddev",
              "Environment": "dev",
              "Name": "teste-subnet-private2-us-east-1b",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "vpc_id": "vpc-08fc6d81de1afeeee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_teste"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:subnet/subnet-0247ad7188a76c540",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.37.0.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0247ad7188a76c540",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125480470368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Domain": "iddev",
              "Environment": "dev",
              "Name": "teste-subnet-public1-us-east-1a",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "iddev",
              "Environment": "dev",
              "Name": "teste-subnet-public1-us-east-1a",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "vpc_id": "vpc-08fc6d81de1afeeee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_teste"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:subnet/subnet-01b11b1f9dda13ade",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.37.4.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b11b1f9dda13ade",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125480470368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Domain": "iddev",
              "Environment": "dev",
              "Name": "teste-subnet-public2-us-east-1b",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "iddev",
              "Environment": "dev",
              "Name": "teste-subnet-public2-us-east-1b",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "vpc_id": "vpc-08fc6d81de1afeeee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_teste"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_teste",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:vpc/vpc-08fc6d81de1afeeee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.37.0.0/18",
            "default_network_acl_id": "acl-08c26abf1c1ae2eb2",
            "default_route_table_id": "rtb-013aa0557f441a618",
            "default_security_group_id": "sg-014b820ca1aee93ac",
            "dhcp_options_id": "dopt-06d1899ad1c6ada91",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08fc6d81de1afeeee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-013aa0557f441a618",
            "owner_id": "125480470368",
            "tags": {
              "Domain": "iddev",
              "Environment": "dev",
              "Name": "vpc-iddev",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "iddev",
              "Environment": "dev",
              "Name": "vpc-iddev",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            }
          }
        }
      ]
    }
  ]
}